docs/envoy/v1.6.0/_sources/api-v2/config/filter/network/rate_limit/v2/rate_limit.proto.rst.txt
.. _envoy_api_file_envoy/config/filter/network/rate_limit/v2/rate_limit.proto:

Rate limit
==========

Rate limit :ref:`configuration overview <config_network_filters_rate_limit>`.

.. _envoy_api_msg_config.filter.network.rate_limit.v2.RateLimit:

config.filter.network.rate_limit.v2.RateLimit
---------------------------------------------

`[config.filter.network.rate_limit.v2.RateLimit proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/config/filter/network/rate_limit/v2/rate_limit.proto#L14>`_


.. code-block:: json

  {
    "stat_prefix": "...",
    "domain": "...",
    "descriptors": [],
    "timeout": "{...}"
  }

.. _envoy_api_field_config.filter.network.rate_limit.v2.RateLimit.stat_prefix:

stat_prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The prefix to use when emitting :ref:`statistics <config_network_filters_rate_limit_stats>`.
  
  
.. _envoy_api_field_config.filter.network.rate_limit.v2.RateLimit.domain:

domain
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The rate limit domain to use in the rate limit service request.
  
  
.. _envoy_api_field_config.filter.network.rate_limit.v2.RateLimit.descriptors:

descriptors
  (:ref:`ratelimit.RateLimitDescriptor <envoy_api_msg_ratelimit.RateLimitDescriptor>`, *REQUIRED*) The rate limit descriptor list to use in the rate limit service request.
  
  
.. _envoy_api_field_config.filter.network.rate_limit.v2.RateLimit.timeout:

timeout
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The timeout in milliseconds for the rate limit service RPC. If not
  set, this defaults to 20ms.
  
  

